conf/wall_iptables.conf
# Generated by iptables-save v1.6.0 on Mon Feb 12 20:20:49 2018
*mangle
:PREROUTING ACCEPT [8:1156]
:INPUT ACCEPT [8:1156]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8:1905]
:POSTROUTING ACCEPT [8:1905]
COMMIT
# Completed on Mon Feb 12 20:20:49 2018
# Generated by iptables-save v1.6.0 on Mon Feb 12 20:20:49 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Feb 12 20:20:49 2018
# Generated by iptables-save v1.6.0 on Mon Feb 12 20:20:49 2018
*filter
:INPUT ACCEPT [2:104]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2:224]
-A INPUT -i lo -j ACCEPT
-A FORWARD -s 212.45.144.88/32 -j DROP
-A FORWARD -d 212.45.144.88/32 -j DROP
-A FORWARD -s 192.168.1.3/32 -j ACCEPT
-A FORWARD -d 192.168.1.3/32 -j ACCEPT
-A FORWARD -s 192.168.1.20/32 -j ACCEPT
-A FORWARD -d 192.168.1.20/32 -j ACCEPT
-A FORWARD -s 192.168.1.1/32 -j ACCEPT
-A FORWARD -d 255.255.255.255/32 -p udp -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 80 -j NFQUEUE --queue-num 1
-A FORWARD -p tcp -m tcp --dport 80 -j NFQUEUE --queue-num 1
-A FORWARD -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -j NFQUEUE --queue-num 8
-A FORWARD -p tcp -m multiport --sports 20,21 -j ACCEPT
-A FORWARD -p tcp -m multiport --dports 20,21 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -p udp -m udp --sport 1194 -j ACCEPT
-A FORWARD -p udp -m udp --dport 1194 -j ACCEPT
-A FORWARD -p tcp -m multiport --sports 25,465 -j ACCEPT
-A FORWARD -p tcp -m multiport --dports 25,465 -j ACCEPT
-A FORWARD -p tcp -m multiport --sports 143,993 -j ACCEPT
-A FORWARD -p tcp -m multiport --dports 143,993 -j ACCEPT
-A FORWARD -p tcp -m multiport --sports 110,995 -j ACCEPT
-A FORWARD -p tcp -m multiport --dports 110,995 -j ACCEPT
-A FORWARD -p tcp -m multiport --sports 5222,5228,9339 -j ACCEPT
-A FORWARD -p tcp -m multiport --dports 5222,5228,9339 -j ACCEPT
-A FORWARD -p udp -m multiport --sports 5353,443,5055,5056 -j ACCEPT
-A FORWARD -p udp -m multiport --dports 5353,443,5055,5056 -j ACCEPT
-A FORWARD -p tcp -m multiport ! --sports 20,21,22,25,80,110,143,443,465,993,995,9050,9151 -m recent --set --name BLACKLIST --mask 255.255.255.255 --rsource
-A FORWARD -p tcp -m multiport ! --sports 20,21,22,25,80,110,143,443,465,993,995,9050,9151 -m recent --update --seconds 3 --name BLACKLIST --mask 255.255.255.255 --rsource -m limit --limit 10/min -j LOG --log-prefix "TCP packet dropped: "
-A FORWARD -p tcp -m multiport ! --sports 20,21,22,25,80,110,143,443,465,993,995,9050,9151 -m recent --update --seconds 3 --name BLACKLIST --mask 255.255.255.255 --rsource -j DROP
-A FORWARD -p udp -m multiport ! --sports 53,1194 -m recent --set --name BLACKLIST --mask 255.255.255.255 --rsource
-A FORWARD -p udp -m multiport ! --sports 53,1194 -m recent --update --seconds 3 --name BLACKLIST --mask 255.255.255.255 --rsource -m limit --limit 10/min -j LOG --log-prefix "UDP packet dropped: "
-A FORWARD -p udp -m multiport ! --sports 53,1194 -m recent --update --seconds 3 --name BLACKLIST --mask 255.255.255.255 --rsource -j DROP
-A FORWARD -p tcp -m multiport ! --sports 20,21,22,25,80,110,143,443,465,993,995,9050,9151 -m recent --remove --name BLACKLIST --mask 255.255.255.255 --rsource -j ACCEPT
-A FORWARD -p udp -m multiport ! --sports 53,1194 -m recent --remove --name BLACKLIST --mask 255.255.255.255 --rsource -j ACCEPT
-A FORWARD -m state --state INVALID -j NFQUEUE --queue-num 2
-A FORWARD -j NFQUEUE --queue-num 3
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Mon Feb 12 20:20:49 2018
